--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
         <link rel="icon" href="images/logo.png">
     </head>
     <body>
-        <div class="box">
+        <div class="box-age">
             <h4>Age Calculator</h4>
-            <div class="date-picker">
+            <div class="date-title">
                 <span>Choose Your Birth Date</span>
-                <input type="date" id="datePicker">
+                <input type="date" id="dateCalculate">
                 <span id="chooseDate"></span>
             </div>
             <div class="age-calc">
-                <div class="age-bok">
-                    <p class="header">Years</p>
+                <div class="box-options">
+                    <p class="age-title">Years</p>
                     <p class="value" id="ageYear">0</p>
                 </div>
-                <div class="age-bok">
-                    <p class="header">Month</p>
+                <div class="box-options">
+                    <p class="age-title">Month</p>
                     <p class="value" id="ageMonth">0</p>
                 </div>
-                <div class="age-bok">
-                    <p class="header">Days</p>
+                <div class="box-options">
+                    <p class="age-title">Days</p>
                     <p class="value" id="ageDays">0</p>
                 </div>
-                <div class="age-bok">
-                    <p class="header">Hours</p>
+                <div class="box-options">
+                    <p class="age-title">Hours</p>
                     <p class="value" id="ageHours">0</p>
                 </div>
-                <div class="age-bok">
-                    <p class="header">Seconds</p>
+                <div class="box-options">
+                    <p class="age-title">Seconds</p>
                     <p class="value" id="ageSeconds">0</p>
                 </div>
-                <div class="age-bok">
-                    <p class="header">Milliseconds</p>
+                <div class="box-options">
+                    <p class="age-title">Milliseconds</p>
                     <p class="value" id="ageMilliseconds">0</p>
                 </div>
             </div>
